# image_denoising_filter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  hdr.sh  run.sh
Animations/: README.md
res/: README.md
shaders/: bialteral.comp  bialteral.spv  bialteral_layers.comp  bialteral_linear.comp  bialteral_linear.spv  comp.spv  compile_shaders.sh  nonlocal.comp  nonlocal.spv  nonlocal_generate.comp  nonlocal_generate.spv  shader.comp  shader_linear.comp
src/: Bitmap.cpp  Bitmap.h  main.cpp  texture.cpp  texture.hpp  timer.hpp  vk_utils.cpp  vk_utils.h
